Dodano placeholder w wyszukiwaniu

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -25,7 +25,7 @@
         <section class = "search-bar">
 
             <label for="BookName">Wpisz tytuł szukanej książki</label> 
-            <input id="BookName" autofocus/>
+            <input id="BookName" placeholder="Wpisz wyszukiwaną frazę..." autofocus/>
 
             <button aria-label="Wyszukaj">Wyszukaj</button>
 
