Poprawki w index.html, dodano index2.html

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -31,7 +31,7 @@
 
         </section>
 
-        <section class = "section-basic">
+        <section class = "search-bar">
 
             <label for = "base-filter">Filtruj za pomocą: </label>
             <select name = "base-filter" id = "base-filter">
