Small style changes

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -9,7 +9,9 @@
 <body>
 
     <section class ="section-box">
-        <h1> Książka </h1>
+        <meta charset="utf-8"/>
+        <title>Ksiegarnia</title>
+        <h1> Księgarnia nazwa WIP </h1>
     </section>
 
 <main>
@@ -48,20 +50,13 @@
     <section class = "listing">
 
         <h2>Znalezione pozycje</h2>
-        <div class="grid-container">
-            <div class="grid-item-header">Tytuł</div>
-            <div class="grid-item-header">Cena</div>
-            <div class="grid-item-header">Rodzaj okładki</div>
-            <div class="grid-item-header">Ilość stron</div>
-            <div class="grid-item-header">Autor</div>
-            <div class="grid-item-header">Opis</div>
-            <div class="grid-item">Placeholder</div>
-            <div class="grid-item">200</div>
-            <div class="grid-item">Placeholder</div>
-            <div class="grid-item">200</div>
-            <div class="grid-item">Placeholder</div>
-            <div class="grid-item">Placeholder</div>
-        </div>
+        <ul>
+            <li>Ksiazka 1; Autor 1; Cena: 1; Okładka twarda; 10 stron; jakiś opis</li>
+            <li>Ksiazka 2; Autor 1; Cena: 1; Okładka twarda; 10 stron; jakiś opis</li>
+            <li>Ksiazka 3; Autor 1; Cena: 1; Okładka twarda; 10 stron; jakiś opis</li>
+            <li>Ksiazka 4; Autor 1; Cena: 1; Okładka twarda; 10 stron; jakiś opis</li>
+            <li>Ksiazka 5; Autor 1; Cena: 1; Okładka twarda; 10 stron; jakiś opis</li>
+        </ul>
 
     </section>
 
