--- a/Lab1/index2.html
+++ b/Lab1/index2.html
@@ -4,10 +4,13 @@
 
 <head>
     <link href="style.css" rel = "stylesheet"/>
+    <meta charset="utf-8"/>
+    <title>Dodawanie pozycji</title>
 </head>
 
 <body>
     <section class = "section-box">
+    
         <h1> Dodawanie pozycji</h1>
     </section>
 
